# kobuki_navigation

./: CMakeLists.txt  README.md  kobuki_demo.repos  package.xml  room.pgm  room.yaml
configuration_files/: kobuki_2d.lua  turtlebot_2d.lua
include/: demo.rviz  kobuki_carto.rviz  kobuki_demo.rviz
launch/: kobuki_bringup.launch.py  kobuki_demo.launch.py  kobuki_gazebo_carto.launch.py  kobuki_nav.launch.py  kobuki_nav2_map.launch.py  kobuki_test.launch.py  robot.launch.py
map/: kitchen.pgm  kitchen.yaml  kitchen2.pgm  kitchen2.yaml  kitchen3.pgm  kitchen3.yaml  kitchen4.yaml  map.pgm  map.yaml  new_map.pgm  new_map.yaml  room2.pgm  room2.yaml
param/: kobuki_nav.yaml
rviz/: kobuki_carto_demo.rviz  kobuki_nav2_demo.rviz
src/: bumper_trigger.cpp
urdf/: kobuki_carto.urdf  kobuki_gazebo_carto.urdf  kobuki_standalone.urdf
