<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kobuki_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Zoe.Li@bshg.com">lizo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--<exec_depend>cartographer_ros</exec_depend>-->
  <depend>kobuki_msgs</depend>

  <depend>urg_node</depend>
  <depend>launch</depend>
  <depend>ros2run</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>tf2_ros</depend>
  <depend>turtlebot2_drivers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
